react/indecision-app/src/sass/components/_button.scss
.big-button {
  background: $purple;
  border: none;
  border-bottom: .6rem solid darken($purple, 10%);
  color: white;
  font-weight: bold;
  font-size: $l-size;
  width: 100%;
  margin-bottom: $xl-size;
  padding: 2.4rem;

  &:disabled {
    opacity: 0.5;
  }
}


.button {
  background: $purple;
  border: none;
  border-bottom: .3rem solid darken($purple, 10%);
  color: white;
  font-weight: 500;
  padding: $s-size;
}


.button--link {
  background: none;
  border: none;
  color: $off-white;
  padding: 0;
}

